--- a/django_blog/frontend/index.html
+++ b/django_blog/frontend/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico">
     <title>frontend</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
+    <div class="progress-bar" style="height: 2px;background-color: #000; width: 0"></div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
