--- a/django_blog/frontend/index.html
+++ b/django_blog/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico">
-    <title>frontend</title>
+    <link rel="shortcut icon" type="image/x-icon" href="http://static.maocatooo.cn/backend/favicon.ico">
+    <title>MaoCat</title>
     <style>
       * {
         padding: 0;
