文章图片兼容的样式，页面总高度

--- a/django_blog/frontend/index.html
+++ b/django_blog/frontend/index.html
@@ -10,6 +10,9 @@
         padding: 0;
         margin: 0;
       }
+      article img {
+        width: 100%;
+      }
     </style>
   </head>
   <body>
