--- a/django_blog/frontend/index.html
+++ b/django_blog/frontend/index.html
@@ -11,7 +11,7 @@
         margin: 0;
       }
       article img {
-        width: 100%;
+        max-width: 100%;
       }
     </style>
   </head>
