--- a/django_blog/frontend/index.html
+++ b/django_blog/frontend/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="http://static.maocatooo.cn/backend/favicon.ico">
-    <title>MaoCat</title>
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-      }
-      article img {
-        max-width: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="http://static.maocatooo.cn/backend/favicon.ico">
+  <title>MaoCat</title>
+  <style>
+    body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, blockquote, th, td {
+      margin: 0;
+      padding: 0;
+    }
+
+    article img {
+      max-width: 100%;
+    }
+  </style>
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
