--- a/django_blog/frontend/index.html
+++ b/django_blog/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="http://static.maocatooo.cn/backend/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="https://static.maocatooo.cn/backend/favicon.ico">
   <title>MaoCat</title>
   <style>
     body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, blockquote, th, td {
